<resources>
    <string name="app_name">GeoQuiz</string>
    <string name="geoquiz">GeoQuiz</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="name">Name</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="scoreboard">Scoreboard</string>
    <string name="app_logo">App logo</string>
    <string name="what_country_does_this_flag_belong_to">What country does this flag belong to?</string>
    <string name="_0_10">0/10</string>
    <string name="reset">Reset</string>
    <string name="back">Back</string>
    <string name="cheat_3_3">Cheat (3/3)</string>
    <string name="submit">Submit</string>
    <string name="flag">Flag</string>
    <string name="clap_emoji">Clap emoji</string>
    <string name="congratulations">Congratulations!</string>
    <string name="username">username</string>
    <string name="scored_0_out_of_10">Scored 0 out of 10</string>
    <string name="_0_cheats_used">0 Cheats Used</string>
    <string name="return_to_menu">Return to menu</string>
    <string name="finish">Finish</string>
    <string name="next_question">Next Question</string>
</resources>