<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blurred_world_map_continents_oceans"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20dp"
    tools:context=".ResultActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/clap"
        android:contentDescription="@string/clap_emoji" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/congratulations"
        android:textColor="@color/teal_700"
        android:textStyle="bold"
        android:textSize="36sp"
        android:paddingVertical="8dp"
        />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:textColor="@android:color/black"
        android:text="@string/username"
        android:textStyle="bold"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/scored_0_out_of_10"
        android:textStyle="bold"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_cheats_used"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/_0_cheats_used"
        android:textStyle="bold"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btn_finish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/return_to_menu"
        android:textColor="@android:color/white"
        android:background="@color/teal_700"/>

</LinearLayout>