<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".QuizQuestionsActivity"
    android:background="@drawable/blurred_world_map_continents_oceans">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="16dp" >

        <TextView
            android:id="@+id/tv_question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:text="@string/what_country_does_this_flag_belong_to" />

        <ImageView
            android:id="@+id/iv_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:src="@drawable/as_flag"
            android:contentDescription="@string/flag" />

        <LinearLayout
            android:id="@+id/ll_progress_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:max="10"
                android:minHeight="50dp"
                android:progress="0"
                android:indeterminate="false" />

            <TextView
                android:id="@+id/tv_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="15dp"
                android:textColorHint="@color/teal_700"
                android:textSize="14sp"
                android:text="@string/_0_10" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_option_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/default_option_border_bg"
            android:gravity="center"
            android:padding="10dp"
            android:text=""
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_option_two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/default_option_border_bg"
            android:gravity="center"
            android:padding="10dp"
            android:text=""
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_option_three"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/default_option_border_bg"
            android:gravity="center"
            android:padding="10dp"
            android:text=""
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_option_four"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/default_option_border_bg"
            android:gravity="center"
            android:padding="10dp"
            android:text=""
            android:textColor="@color/black"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tv_reset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="33"
                android:gravity="center"
                android:text="@string/reset"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:background="#dfdfdf"
                android:padding="10dp"
                android:layout_marginVertical="10dp"
                android:layout_marginEnd ="5dp"
                android:layout_marginStart="10dp" />

            <TextView
                android:id="@+id/tv_back"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="33"
                android:gravity="center"
                android:text="@string/back"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:background="#dfdfdf"
                android:padding="10dp"
                android:layout_marginVertical="10dp"
                android:layout_marginHorizontal="5dp" />

            <TextView
                android:id="@+id/tv_cheat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="33"
                android:gravity="center"
                android:text="@string/cheat_3_3"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:background="#dfdfdf"
                android:padding="10dp"
                android:layout_marginVertical="10dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="10dp" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/teal_700"
            android:textSize="16sp"
            android:text="@string/submit"
            android:textColor="@android:color/white" />
    </LinearLayout>

</ScrollView>